--- a/01 cenipa_limpa_trata.ipynb
+++ b/01 cenipa_limpa_trata.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1fc38ebb250>"
+       "<matplotlib.image.AxesImage at 0x1caa50b6ad0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "0         SUBSTANCIAL                           4  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "0                 UNK  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "0  OPERAÇÃO DA AERONAVE  FATOR OPERACIONAL  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "0                           DECEA  DEPARTAMENTO DE CONTROLE DE ESPAÇO AÉREO  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        "0                    NÃO  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
        "2  ASSOCIAÇÃO BRASILEIRA DE AERONAVES ANTIGAS E C...  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1476,7 @@
        "2"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -2127,7 +2127,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# converte a data ocorrencia_dia para ano-mes-dia\n",
+    "def converte_data(datax):\n",
+    "    return (datax[6:10] + '/' + datax[3:5] + '/' + datax[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# modifica data ocorrencia_dia\n",
+    "df_acidentes['ocorrencia_dia'] = df_acidentes['ocorrencia_dia'].apply(converte_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# converte type para datetime\n",
+    "df_acidentes['ocorrencia_dia'] = pd.to_datetime(df_acidentes['ocorrencia_dia'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "Index: 9819 entries, 0 to 9820\n",
+      "Series name: ocorrencia_dia\n",
+      "Non-Null Count  Dtype         \n",
+      "--------------  -----         \n",
+      "9819 non-null   datetime64[ns]\n",
+      "dtypes: datetime64[ns](1)\n",
+      "memory usage: 153.4 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_acidentes.ocorrencia_dia.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2191,7 @@
        "(9819, 42)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2148,7 +2203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
