--- a/01 cenipa_limpa_trata.ipynb
+++ b/01 cenipa_limpa_trata.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1900a9f1290>"
+       "<matplotlib.image.AxesImage at 0x238ec157090>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        "0         SUBSTANCIAL                           4  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "0                 UNK  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "0  OPERAÇÃO DA AERONAVE  FATOR OPERACIONAL  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "0                           DECEA  DEPARTAMENTO DE CONTROLE DE ESPAÇO AÉREO  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "0                    NÃO  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
        "2  ASSOCIAÇÃO BRASILEIRA DE AERONAVES ANTIGAS E C...  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
        "2"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1682,7 @@
        "      <td>BRASIL</td>\n",
        "      <td>SBLO</td>\n",
        "      <td>01/01/2007</td>\n",
-       "      <td>2024-05-15 00:00:00</td>\n",
+       "      <td>2024-05-16 00:00:00</td>\n",
        "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>NÃO</td>\n",
@@ -1730,7 +1730,7 @@
        "      <td>BRASIL</td>\n",
        "      <td>***</td>\n",
        "      <td>01/01/2007</td>\n",
-       "      <td>2024-05-15 21:10:00</td>\n",
+       "      <td>2024-05-16 21:10:00</td>\n",
        "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>NÃO</td>\n",
@@ -1778,7 +1778,7 @@
        "      <td>BRASIL</td>\n",
        "      <td>***</td>\n",
        "      <td>01/01/2009</td>\n",
-       "      <td>2024-05-15 15:35:00</td>\n",
+       "      <td>2024-05-16 15:35:00</td>\n",
        "      <td>FINALIZADA</td>\n",
        "      <td>1</td>\n",
        "      <td>NÃO</td>\n",
@@ -1829,9 +1829,9 @@
        "2                 ACIDENTE   MOGI DAS CRUZES            SP          BRASIL   \n",
        "\n",
        "  ocorrencia_aerodromo ocorrencia_dia     ocorrencia_hora investigacao_status  \\\n",
-       "0                 SBLO     01/01/2007 2024-05-15 00:00:00                None   \n",
-       "1                  ***     01/01/2007 2024-05-15 21:10:00                None   \n",
-       "2                  ***     01/01/2009 2024-05-15 15:35:00          FINALIZADA   \n",
+       "0                 SBLO     01/01/2007 2024-05-16 00:00:00                None   \n",
+       "1                  ***     01/01/2007 2024-05-16 21:10:00                None   \n",
+       "2                  ***     01/01/2009 2024-05-16 15:35:00          FINALIZADA   \n",
        "\n",
        "   total_aeronaves_envolvidas ocorrencia_saida_pista ocorrencia_latitude  \\\n",
        "0                           1                    NÃO                None   \n",
@@ -1924,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -2035,11 +2035,11 @@
      "data": {
       "text/plain": [
        "ocorrencia_hora\n",
-       "2024-05-15 00:00:00    271\n",
-       "2024-05-15 20:00:00    171\n",
-       "2024-05-15 19:00:00    153\n",
-       "2024-05-15 13:30:00    135\n",
-       "2024-05-15 12:00:00    130\n",
+       "2024-05-16 00:00:00    271\n",
+       "2024-05-16 20:00:00    171\n",
+       "2024-05-16 19:00:00    153\n",
+       "2024-05-16 13:30:00    135\n",
+       "2024-05-16 12:00:00    130\n",
        "Name: count, dtype: int64"
       ]
      },
@@ -2107,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -2398,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -2553,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2574,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2584,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -2653,36 +2653,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
     "# retira os pontos da latitude e longitude\n",
     "def retira_pontos(latlong):\n",
     "\n",
-    "    print(latlong)\n",
+    "    latlong = str(latlong)\n",
+    "    latlong = latlong.strip()\n",
     "\n",
-    "    if latlong in ('Nan', 'None', '***'):\n",
-    "        latlong = '***'\n",
+    "    if (latlong in ('Nan', 'nan', 'None', '***')) | \\\n",
+    "        (type(latlong)==\"<class 'str'\"):\n",
+    "        latlong = '0'\n",
     "    else:\n",
+    "        latlong = str(latlong)\n",
     "        latlong = latlong.replace('.', '')\n",
+    "        latlong = latlong.replace(' ', '')\n",
+    "        latlong = latlong.replace(',', '')\n",
+    "        latlong = latlong.replace('\\\\t', '')\n",
+    "        latlong = latlong.replace('\\t', '')\n",
+    "        latlong = latlong.replace(',', '')\n",
+    "        latlong = latlong.replace('*', '')\n",
+    "        latlong = latlong.replace('°', '')\n",
+    "        latlong = latlong.replace('--', '')\n",
+    "\n",
+    "        if len(latlong) == 0:\n",
+    "            latlong = 0\n",
+    "        else:\n",
+    "            if latlong[0:1] == '-':\n",
+    "                latlong = latlong[0:3] + '.' + latlong[3:20]\n",
+    "            else:\n",
+    "                latlong = latlong[0:2] + '.' + latlong[2:20]\n",
+    "\n",
+    "    latlong = float(latlong)\n",
     "    return latlong"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
     "# chama retira_pontos\n",
-    "#df_acidentes['ocorrencia_latitude'] = df_acidentes['ocorrencia_latitude'].apply(retira_pontos)\n",
-    "#df_acidentes['ocorrencia_longitude'] = df_acidentes['ocorrencia_longitude'].apply(retira_pontos)"
+    "df_acidentes['ocorrencia_latitude'] = df_acidentes['ocorrencia_latitude'].apply(retira_pontos)\n",
+    "df_acidentes['ocorrencia_longitude'] = df_acidentes['ocorrencia_longitude'].apply(retira_pontos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -2691,7 +2712,7 @@
        "(9819, 45)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2703,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
